# wellness-manager

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
src/wellness_manager/domains/: healthcheck.py  heartbeat.py
tests/: conftest.py  test_main.py
tests/domains/: test_healthcheck.py  test_heartbeat.py
